finish exercise 4, start exercise 5

--- a/Exercise 4/index.html
+++ b/Exercise 4/index.html
@@ -31,6 +31,7 @@
         Blue Background Value:<br>
         <input type="number" id="blueBackground"value=0><br>
     </form>
+    <button onclick="changeParagraph()">Make Changes</button>
 </body>
 
 </html>
