add minor styling

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <a href="./Exercise 4/index.html">Exercise 4</a>
         </li>
     </ul>
+
+    <h3><a href="https://zkulphong.github.io">Check out my main website</a></h3>
 </body>
 
 </html>
